--- a/assets/templates/appResume/premium/editable/editableHobby.html
+++ b/assets/templates/appResume/premium/editable/editableHobby.html
@@ -1,6 +1,6 @@
 <editable-hobby class="col-sm-24 col-md-22 col-lg-18 centered section__editable__container" data-editing="hobby">
 
-    <ui-switcher id="activity" value={ active } commit="true"></ui-switcher>
+    <ui-switcher id="activity" color="white" value={ active } commit="true"></ui-switcher>
 
     <div onClick={ show.hobby } class="hidden-sm hidden-md section__editable__arrow" data-pos="left" data-active={ screen == "text" } data-closer="true">Выбрать хобби</div>
     <div onClick={ show.text } class="hidden-sm hidden-md section__editable__arrow" data-pos="right" data-active={ screen == "hobby" } data-closer="true">Описание увлечений</div>
