--- a/assets/templates/appResume/premium/editable/editableJobs.html
+++ b/assets/templates/appResume/premium/editable/editableJobs.html
@@ -1,6 +1,6 @@
 <editable-jobs class="col-sm-24 col-md-22 col-lg-19 centered section__editable__container" data-editing="jobs">
 
-    <ui-switcher id="activity" value={ active } commit="true"></ui-switcher>
+    <ui-switcher id="activity" color="white" value={ active } commit="true"></ui-switcher>
 
     <div class="section__editable__content col-lg-offset-1 { hide : !switcher.value }">
 
