--- a/assets/templates/appResume/premium/editable/editableSkills.html
+++ b/assets/templates/appResume/premium/editable/editableSkills.html
@@ -1,6 +1,6 @@
 <editable-skills class="col-sm-24 col-md-22 col-lg-20 centered section__editable__container" data-editing="skills">
 
-    <ui-switcher id="activity" value={ active } commit="true"></ui-switcher>
+    <ui-switcher id="activity" color="white" value={ active } commit="true"></ui-switcher>
 
     <div class="section__editable__content col-lg-offset-2 { hide : !switcher.value }">
 
