--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -11,6 +11,7 @@
 
 // UI elements
 @import '../../assets/css/ui/icons';
+@import 'ui/icons';
 @import '../../assets/css/ui/basic/button';
 @import '../../assets/css/ui/basic/input';
 @import '../../assets/css/ui/basic/textarea';
