--- a/views/premium.html
+++ b/views/premium.html
@@ -51,6 +51,8 @@
     <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/commons/ui/buttonSave.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/commons/sections/finish.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableSocial.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/switcher.html" type="riot/tag"></script>
 
     <!--/ Modules /-->
     <script src="/assets/templates/modules/loader.html" type="riot/tag"></script>
