--- a/assets/templates/appResume/premium/editable/editableTags.html
+++ b/assets/templates/appResume/premium/editable/editableTags.html
@@ -1,6 +1,6 @@
 <editable-tags class="col-sm-offset-2 col-sm-20 col-md-offset-4 col-md-16 col-lg-offset-6 col-lg-13 section__editable__container" data-editing="tags">
 
-    <ui-switcher id="activity" value={ active } commit="true"></ui-switcher>
+    <ui-switcher id="activity" color="white" value={ active } commit="true"></ui-switcher>
 
     <div class="section__editable__content { hide : !switcher.value }">
 
