--- a/assets/templates/root.html
+++ b/assets/templates/root.html
@@ -3,6 +3,7 @@
     <resume-list></resume-list>
     <resume-edit></resume-edit>
     <resume-section></resume-section>
+    <resume-preview></resume-preview>
     <resume-select></resume-select>
     <resume-sendmail></resume-sendmail>
     <section-notify></section-notify>
@@ -46,6 +47,8 @@
 
     $root = this;
     $rootScope = $$(this.root);
+
+    $resume = $store.resume;
 
     // $store.inbox.set([]);
     // $store.data.set([]);
@@ -95,6 +98,7 @@
                 edit: $root.tags["resume-edit"],
                 stat: $root.tags["resume-stat"],
                 select: $root.tags["resume-select"],
+                preview: $root.tags["resume-preview"],
                 section: $root.tags["resume-section"],
                 sendmail: $root.tags["resume-sendmail"]
             },
