--- a/assets/templates/ui/switcher.html
+++ b/assets/templates/ui/switcher.html
@@ -1,4 +1,4 @@
-<ui-switcher onClick={ onClick } onUpdate={ opts.onupdate ? opts.onupdate : "self" } class="switcher" active="{ value }">
+<ui-switcher onClick={ onClick } onUpdate={ opts.onupdate ? opts.onupdate : "self" } class="switcher { small : typeof opts.small !== 'undefined' } { disabled : typeof opts.disabled !== 'undefined' } { opts.color ? opts.color : null }" active="{ value }">
 
     <div class="switch">
         <input class="switch-input" type="checkbox" checked="">
